--- a/component.html
+++ b/component.html
@@ -4,33 +4,113 @@
         <meta charset="utf-8">
         <title>CrossKnowledge - Code challenge</title>
         <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet"> 
+
+        <style>
+            .body {
+                font-family: Roboto;
+            }
+
+            .article {
+                width: 320px;
+                height: auto;
+                border: 1px solid #e7e7e7;
+            }
+
+            .bg--gray {
+                background-color: #f7f7f7;
+            }
+
+            .header {
+                display: flex;
+                justify-content: space-between;
+                align-items: center;
+                height: auto;
+                padding: 8px;
+                font-size: 14px;
+            }
+
+            .header--text {
+                display: grid;
+                gap: 8px;
+            }
+
+            .title {
+                font-weight: 500;
+            }
+
+            .duration {
+                font-weight: 300;
+            }
+
+            .rating {
+                display: flex;
+                align-items: center;
+            }
+
+            .img--certified {
+                width: 24px;
+                margin-left: 5px;
+            }
+
+            .main {
+                position: relative;
+            }
+
+            .banner {
+                width: 100%;
+            }
+
+            .text--gray--dark {
+                color: #202020;
+            }
+
+            .btn--link {
+                text-decoration: none;
+                padding: 8px 52px;
+                background-color: #d8d8d8;
+                border: 2px solid #ffffff;
+                border-radius: 50px;
+                opacity: 0.9;
+                position: absolute;
+                top: 85%;
+                left: 19%;
+            }
+
+            .footer {
+                padding: 12px 8px;
+            }
+
+            .paragraph--synopsis {
+                font-weight: 300;
+            }
+        </style>
     </head>
 
-    <body>
-        <article>
-            <header>
-                <div>
-                    <div>
+    <body class="body">
+        <article class="article">
+            <header class="header bg--gray">
+                <div class="header--text">
+                    <div class="title">
                         Avengers: Infinity War
                     </div>
-                    <div>
+                    <div class="duration">
                         156 minutes
                     </div>
                 </div>
-                <div>
-                    85% <img src="https://www.rottentomatoes.com/assets/pizza-pie/images/icons/global/cf-lg.3c29eff04f2.png" alt="">
+                <div class="rating">
+                    85% <img class="img--certified" src="https://www.rottentomatoes.com/assets/pizza-pie/images/icons/global/cf-lg.3c29eff04f2.png" alt="">
                 </div>
             </header>
 
-            <div>
-                <img src="https://i.ibb.co/9tLcR7s/avengers.jpg">
-                <a href="https://www.rottentomatoes.com/m/avengers_infinity_war" target="_blank">
+            <div class="main">
+                <img class="banner" src="https://i.ibb.co/9tLcR7s/avengers.jpg">
+                <a class="btn--link bg--gray text--gray--dark" href="https://www.rottentomatoes.com/m/avengers_infinity_war" target="_blank">
                     Check review
                 </a>
             </div>
 
-            <footer>
-                <p>
+            <footer class="footer bg--gray">
+                <p class="paragraph--synopsis text--gray--dark">
                     An unprecedented cinematic journey ten years in the making and spanning the entire Marvel Cinematic Universe, Marvel Studios' "Avengers: Infinity War" brings to the screen the ultimate, deadliest showdown of all time. The Avengers and their Super Hero allies must be willing to sacrifice all in an attempt to defeat the powerful Thanos before his blitz of devastation and ruin puts an end to the universe. 
                 </p>
             </footer>
